--- a/print.html
+++ b/print.html
@@ -602,7 +602,147 @@ int main() {
 </ul>
 <p>Note: 読み出しのみならセーフ。
 メモリに置いた定数を複数スレッドから共有するのは問題ない。</p>
-<h2 id="ロック-ミューテックス"><a class="header" href="#ロック-ミューテックス">ロック (ミューテックス)</a></h2>
+<p>そのままだとレースコンディションを起こしてしまうようなコード区間を
+クリティカルセクションという。
+クリティカルセクションを保護してスレッドセーフにするために待ち合わせ等を
+行うことを同期をとる (synchronize) という。</p>
+<h2 id="ロック-ミューテックス-mutex"><a class="header" href="#ロック-ミューテックス-mutex">ロック (ミューテックス, Mutex)</a></h2>
+<p>ロックは同時に一人しか獲得する (acquire) ことができない同期プリミティブである。
+とりあえずこれを覚えるだけで OK と言っても過言ではない。
+クリティカルセクションが終了したら解放する (release)。</p>
+<p>ロックが取れない場合、スレッドを sleep 状態
+(カーネルのスケジューラによる管理状態の1つ) に入れてアンロックされるまで
+スケジュールから外される。
+ただしこれはコンテキストスイッチが伴いオーバーヘッドが大きいので、
+ロックを持っているスレッドが他のコアにおり、相手がメモリを少しいじって
+即アンロックするだけならばそのままビジーループで待った方が効率よい(マルチコアの場合)。
+よって一定回数スピン (ビジーループ) して待ち、それでも取れないなら
+スリープするという最適化がよく行われる。</p>
+<h3 id="ユーザランドスピンロック-上級者向け"><a class="header" href="#ユーザランドスピンロック-上級者向け">ユーザランドスピンロック (上級者向け)</a></h3>
+<p>スレッドをスリープに入れるとか、相手がアンロックした時に起きてくるとかは
+カーネルランドでしかできないので、mutex lock/unlock には
+システムコールを発行する必要がある。</p>
+<p>それが嫌な場合、スリープを諦めることを条件に、
+スピンロックをユーザランドで実装することは不可能ではない
+(スピンロックを作るためのアトミック命令はユーザモードでも実行可能なため)。
+ただし、ユーザモードのコードは常にタイマ割り込みによってカーネルにプリエンプトされる
+可能性があり、それを防ぐ術もない。
+ロックを持ったスレッドが CPU を奪われると、再度 CPU を割り当てられて
+アンロックを実行するまで待っているスレッドはビジーループでそのコアを使用率 100% で
+使い潰すことになる。
+とはいえ、現代の PC/サーバ クラスのマルチコア環境で全コアを使い切っている状況は
+ほとんどなく、持て余しているというのも実情である。
+なので実行可能 (CPU 割り当て可能) 状態のスレッド数がコア数を上回り続けることは
+ほとんどなく、ロックを持ったスレッドが CPU を奪われたままになり続けることは
+ほとんどないと言えなくもない。</p>
+<p>というわけで私からは評価不能である。
+とりあえず、とあるデータベースソフトウェアがそのようなことをやっていて、
+Linus からは pure garbage などという暴言を頂いたようだ。</p>
+<h3 id="rwlock"><a class="header" href="#rwlock">RwLock</a></h3>
+<p>読み出しはよく行われるが、書き換えは稀にしか起こらないようなケースがある。
+複数の読み出しはロックなしで同時に行っても安全だが、
+書き換え中は他のスレッドの読み出しと書き込み両方を禁止する必要がある。</p>
+<div class="table-wrapper"><table><thead><tr><th></th><th>Read</th><th>Write</th></tr></thead><tbody>
+<tr><td>Read</td><td>OK</td><td>NG</td></tr>
+<tr><td>Write</td><td>NG</td><td>NG</td></tr>
+</tbody></table>
+</div>
+<p>いずれか1つが Write アクセスの場合は Mutex と同じだが、
+すべて Read アクセスの場合はロックなしの動作になるようなロックがあると効率がよい。
+それが Read Write Lock または Exclusive Shared Lock と呼ばれるものである。
+ファイルロックも同じような仕組みが提供されることが多い。</p>
+<h2 id="条件変数-condition-variable"><a class="header" href="#条件変数-condition-variable">条件変数 (Condition Variable)</a></h2>
+<p>ユーザランドで Mutex を使えば、ロックを取れなかったときにスレッドをスリープ状態にして
+OS に CPU (コア) を他のスレッドに割り当ててもらって CPU を有効活用できる。
+また、スリープ状態のスレッドは実行可能になったら適切に起こす (wake up) 必要がある。</p>
+<p>このスリープをもっと汎用的に使えるように設計されたのが、条件変数である。
+モニタパターンとも呼ばれる。
+ちょっと使い方にクセがあって条件変数という名前も直感的でないが、
+非常に汎用性が高く、一度覚えれば CPU を適切に割り当てるプログラムが書けるようになる。
+条件変数という名前の由来は私もよく分からないので少なくとも名前の意味を
+考えるのはやめておくのをおすすめする。</p>
+<p>条件変数は単独で使用するのではなく、他の要素と同時にパターンに従って
+使用されることを前提として設計されている。</p>
+<ul>
+<li>Mutex またはそれに類するロック</li>
+<li>その Mutex で保護された変数群</li>
+<li>その Mutex に関連付けられた条件変数とモニタ条件</li>
+</ul>
+<p>使い方は決まっているのでまずは使い方を丸覚えしたほうがよい。</p>
+<pre><code class="language-C">// mutex = init_mutex();
+// condvar = init_condvar(mutex);
+mutex.lock();
+while (!(condition)) {
+  // unlock and sleep
+  condvar.wait();
+  // wakeup and lock
+}
+do_something1();
+mutex.unlock();
+</code></pre>
+<ol>
+<li>まず、とにもかくにもロックを取得し、クリティカルセクションに入る。</li>
+<li>この時点で共有変数には自分一人しかアクセスできないことが保証されている。
+ロックで保護された変数を読み取り、「条件」が満たされていないならば
+その条件に対応させる「条件変数上で待機する (wait)」。
+ここで、if 文ではなく while 文としておく。
+理由は後述するが、最初は定型文として覚えてしまった方がよい。</li>
+<li>wait は <strong>ロックを外し</strong>、このスレッドをスリープさせる。
+対象の条件変数のモニタに入る、とも言う。</li>
+<li>wait は 対象の条件変数に対して通知 (notify, signal, wakeup などと言われる)
+が来ると起きる。これについては後述。
+また、<strong>ロックを再度取得した状態で</strong> 起きてくる(そういう風に頑張って作られている)。</li>
+<li>起床後、もう一度同じ条件を確認する。ロックを持った状態で起きてくるので安全である。
+条件が満たされているのを確認できた場合はループを抜けて本処理に入る。
+条件が満たされていない場合は前回と同様にもう一度 wait する。</li>
+<li>満たされた条件のもと何らかの処理を行い、アンロックし、完了。</li>
+</ol>
+<p>while ループとしておき起床後に再度同じ条件をチェックする理由は</p>
+<ul>
+<li>spurious wakeup といって、起こされていないのに起きる可能性がある。
+<ul>
+<li>ほとんどのユーザランドライブラリで注意されている。</li>
+</ul>
+</li>
+<li>他にも同じ条件変数で寝ているスレッドがあり、ロックを取りながら起きようとする際に
+他のスレッドに負け、勝ったスレッドがロック状態のうちに条件を満たさないように
+保護された変数を変更した場合、ロックを取れた頃には条件が満たされない状態に
+なってしまっている。</li>
+</ul>
+<p>前者はユーザランドでどんな状況でも厳密に正しく実装するのが重すぎるから、らしいが
+具体的なところはよくわからない。
+シグナルによる EINTR のハンドリングが絡むとよくないとの噂がある。
+Linux や FreeBSD のカーネル用関数では spurious wakeup は触れられておらず、
+起きないのかもしれない。
+しかし後者の問題は常に対応する必要があり、後者を対応すれば自然に前者にも
+対応できるのだから、結論は簡単で常に while のロジックを使うべきである。</p>
+<p>プログラミング言語やライブラリによっては <code>while (!(condition))</code> の condition の
+部分をラムダ式等で渡せる (渡すしかない) ようになっているものもある。</p>
+<ul>
+<li>while を使わない等の間違った使い方を封殺する。</li>
+<li>while の中に成立を待つ条件の否定を書かないといけないのを、
+関数から肯定の条件を返すようにできる。</li>
+</ul>
+<pre><code class="language-C">// mutex = init_mutex();
+// condvar = init_condvar(mutex);
+mutex.lock();
+do_something2();
+if (condition) {
+  condvar.notify_all();
+}
+mutex.unlock();
+</code></pre>
+<ol>
+<li>起こす側も、まずロックは取得する。
+起こす側と起こされる側を同一ロジックにすることも可能だが、使い方を理解すれば
+自然にそのようにも書けるようになる。</li>
+<li>ロックで保護された変数を操作し、もし条件が満たされるようになり
+条件が満たされず寝ているスレッドがいるなら起こす必要がある場合、
+notify 操作を行う。
+notify_one, notify_all (wakeup_one, wakeup_all) のように複数の機能が提供
+されている場合があるが、よほど自信がある場合以外は notify_all を強くおすすめする。</li>
+<li>アンロックして完了。</li>
+</ol>
 <h2 id="注意-volatile-は罠"><a class="header" href="#注意-volatile-は罠">注意: volatile は罠</a></h2>
 <p>CON02-C. volatile を同期用プリミティブとして使用しない</p>
 <p><a href="https://www.jpcert.or.jp/sc-rules/c-con02-c.html">https://www.jpcert.or.jp/sc-rules/c-con02-c.html</a></p>
