--- a/print.html
+++ b/print.html
@@ -950,6 +950,294 @@ Google が Android のために JVM を x86 から ARM に持っていったら
 怪奇現象にしか見えないメモリオーダリングのバグに苦労したらしい…。</p>
 <h3 id="スリープロック-普通のロック"><a class="header" href="#スリープロック-普通のロック">スリープロック (普通のロック)</a></h3>
 <h2 id="ロックフリーアルゴリズム-初心者お断り"><a class="header" href="#ロックフリーアルゴリズム-初心者お断り">ロックフリーアルゴリズム (初心者お断り)</a></h2>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="インラインアセンブラ"><a class="header" href="#インラインアセンブラ">インラインアセンブラ</a></h1>
+<p>C/C++ ソースの中にアセンブラを埋め込める。
+C コードの途中にだいたいどこでも埋め込めるため、気軽にアセンブラ入門できる。</p>
+<ul>
+<li>アセンブラのソースファイルを用意する、ビルドシステムを整備するのが面倒。</li>
+<li>関数の引数や返り値、スタックの処理は C に任せたい。</li>
+</ul>
+<p>こんな時におすすめ。
+C の <code>main()</code> を呼ぶ前のスタートアップルーチンはアセンブラのソースファイルを
+用意した方がいいかも。</p>
+<h2 id="注意"><a class="header" href="#注意">注意</a></h2>
+<ul>
+<li>アセンブリ命令は機械語と対応しているので他ハードウェアへの移植性は諦めること。</li>
+<li>AT&amp;T 表記の GAS (GNU Assembler) と Intel 表記の MASM
+(Microsoft Macro Assembler) でオペランドの src と dst の順番が逆という
+とんでもない罠があるので注意。</li>
+<li>CPU が同じなら同じ命令が使えるはずというのはともかく、アセンブラへの命令は
+標準仕様もクソもありません。そういうのは諦めてください。</li>
+<li>互換性とか一般性とかは捨てる必要があるので、GAS を説明します。
+これが分かれば他でも生き延びられる。</li>
+</ul>
+<h2 id="gas-gnu-assembler"><a class="header" href="#gas-gnu-assembler">GAS (GNU ASsembler)</a></h2>
+<p>多分新しそうなマニュアルへのリンク</p>
+<p><a href="https://sourceware.org/binutils/docs/as/">https://sourceware.org/binutils/docs/as/</a></p>
+<pre><code class="language-sh"># コマンド名は as
+# 通常は gcc から自動で呼ばれる
+as --version
+</code></pre>
+<h2 id="c-コンパイル-広義-の流れ"><a class="header" href="#c-コンパイル-広義-の流れ">C コンパイル (広義) の流れ</a></h2>
+<ol>
+<li>C ソース (*.c)</li>
+<li>プリプロセス (#include や #define 等を処理する)</li>
+<li>プリプロセス済み C ソース</li>
+<li>コンパイル (狭義) (C をアセンブラに変換する)</li>
+<li>アセンブリソース (*.s)</li>
+<li>アセンブル (アセンブラを機械語に変換する)</li>
+<li>オブジェクトファイル (*.o) (機械語だが、外部グローバル変数や関数への参照が未解決)</li>
+<li>リンク</li>
+<li>実行可能ファイル or ライブラリファイル</li>
+</ol>
+<p>ちなみにコンパイラを自作する場合はアセンブラを出力してアセンブルとリンクを
+既存ツールに任せると楽。Rust もそうしている。</p>
+<h2 id="関連コマンド"><a class="header" href="#関連コマンド">関連コマンド</a></h2>
+<p>実行可能ファイルまでリンクせず、オブジェクトファイル <code>*.o</code> の生成までで止める。</p>
+<pre><code class="language-sh">gcc -c src.c
+</code></pre>
+<p>C コンパイルの後、アセンブラの生成で止める。拡張子は <code>*.s</code>。
+これをアセンブルすると <code>*.o</code> ができる。</p>
+<pre><code class="language-sh">gcc -S src.c
+</code></pre>
+<p>gcc は C コンパイラではなく総合フロントエンドなので、アセンブルしたいなら
+<code>*.s</code> ファイルをそのまま渡せばよい。</p>
+<pre><code class="language-sh"># make src.o (not an execuable)
+gcc -c src.s
+</code></pre>
+<p>プリプロセスで止める。</p>
+<pre><code class="language-sh">gcc -E src.c
+</code></pre>
+<p>オブジェクトファイルをディスアセンブルする。</p>
+<pre><code class="language-sh">objdump -d src.o
+</code></pre>
+<h2 id="例"><a class="header" href="#例">例</a></h2>
+<p>C ソース</p>
+<pre><code class="language-c">#include &lt;stdio.h&gt;
+
+int main() {
+        puts("hello");
+        return 0;
+}
+</code></pre>
+<p>機械語とディスアセンブル</p>
+<pre><code class="language-text">$ gcc -O3 -g0 src.c
+$ objdump -d src.o
+
+src.o:     file format elf64-x86-64
+
+
+Disassembly of section .text.startup:
+
+0000000000000000 &lt;main&gt;:
+   0:   48 83 ec 08             sub    $0x8,%rsp
+   4:   48 8d 3d 00 00 00 00    lea    0x0(%rip),%rdi        # b &lt;main+0xb&gt;
+   b:   e8 00 00 00 00          call   10 &lt;main+0x10&gt;
+  10:   31 c0                   xor    %eax,%eax
+  12:   48 83 c4 08             add    $0x8,%rsp
+  16:   c3                      ret
+</code></pre>
+<p>コンパイラの吐いたアセンブリソース</p>
+<pre><code class="language-asm">        .file   "src.c"
+        .text
+        .section        .rodata.str1.1,"aMS",@progbits,1
+.LC0:
+        .string "hello"
+        .section        .text.startup,"ax",@progbits
+        .p2align 4
+        .globl  main
+        .type   main, @function
+main:
+.LFB11:
+        .cfi_startproc
+        subq    $8, %rsp
+        .cfi_def_cfa_offset 16
+        leaq    .LC0(%rip), %rdi
+        call    puts@PLT
+        xorl    %eax, %eax
+        addq    $8, %rsp
+        .cfi_def_cfa_offset 8
+        ret
+        .cfi_endproc
+.LFE11:
+        .size   main, .-main
+        .ident  "GCC: (Debian 12.2.0-14) 12.2.0"
+        .section        .note.GNU-stack,"",@progbits
+</code></pre>
+<p>謎の呪文が多くて気持ち悪くなるが、そういうところはコンパイラに任せて
+インラインアセンブラを使おう。</p>
+<p>抵抗感を軽減するための解説</p>
+<ul>
+<li>.file とかのドットで始まる指令
+<ul>
+<li>ディレクティブと呼ばれるもので、機械語命令を置くのではなく
+アセンブラへの指令を出せる。マニュアルを検索すると出てくるはず。</li>
+<li>.section
+<ul>
+<li>elf (オブジェクトファイルや実行可能ファイルのフォーマット) の
+どの名前のセクションに入れるかを指定する。
+<ul>
+<li>text: プログラムコードを入れるセクション。思いっきり機械語のバイナリが
+入っているので、名前がミスリーディング。
+名前の由来はよく分からない。</li>
+<li>data: グローバル変数が入っている。
+elf ファイルに初期値イメージが入っている。</li>
+<li>bss: ゼロ初期化されるグローバル変数が入っている。
+elf ファイルにデータのコピーが入っておらず、メモリレンジの情報だけが入る。
+main() 関数に入る前にゼロフィルする必要がある。</li>
+<li>rodata: Read Only DATA。data のリードオンリー版。
+文字列リテラルの本体もここに入る。</li>
+</ul>
+</li>
+</ul>
+</li>
+<li>.string
+<ul>
+<li>文字列データをここに置く。他にも <code>.byte</code> <code>.word</code> などで定数リテラルを
+そのまま置ける。</li>
+</ul>
+</li>
+<li>.globl
+<ul>
+<li>シンボルをグローバルにする。要は他のオブジェクトファイルとリンクできるようにする。
+C で言うと static のついていないグローバル変数・関数にする。
+<del>なんで C はデフォルトが外部リンケージなんだ。</del></li>
+</ul>
+</li>
+<li>.cfi_* 系
+<ul>
+<li>謎のデバッグ用情報。あまり気にしなくてよし。</li>
+</ul>
+</li>
+<li>.include, .incbin
+外部ファイルを読み込んでインクルードする。
+なんと外部バイナリを読んでその場所に置ける。</li>
+</ul>
+</li>
+<li>インデントなしでコロンで終わっている識別子
+<ul>
+<li>ラベル。アドレスとして本文から参照できる。</li>
+<li>他のオブジェクトファイルに公開したい場合は .globl を使う。</li>
+</ul>
+</li>
+<li>インデントされていてドットで始まっていないもの
+<ul>
+<li>CPU 命令。</li>
+<li>…と見せかけて疑似命令 (1つ、または複数の CPU 命令に変換される
+アセンブラ提供の便利機能) のこともある。</li>
+<li>疑似命令は逆アセンブルすると正体を現すかもしれないし、逆アセンブラが気を利かせて
+疑似命令で表示してくれるかもしれない。</li>
+<li>なんだか疑似命令をディレクティブのこととして説明している文書も多く見つかるが、
+そもそも情報少なすぎるし細かいことは気にしなくていいです。</li>
+</ul>
+</li>
+</ul>
+<h2 id="インラインアセンブラの書き方"><a class="header" href="#インラインアセンブラの書き方">インラインアセンブラの書き方</a></h2>
+<p>多分新しそうなマニュアルへのリンク</p>
+<p><a href="https://gcc.gnu.org/onlinedocs/gcc/Using-Assembly-Language-with-C.html">https://gcc.gnu.org/onlinedocs/gcc/Using-Assembly-Language-with-C.html</a></p>
+<p>アセンブラが機械語と一対一だというのが妄言だと理解したら、
+インラインアセンブラの移植性皆無で超絶便利な機能を理解する準備ができたといえる。</p>
+<p>アセンブラが扱うのはレジスタだが、C では変数という抽象的な概念を操作している。
+アセンブラを書くとなると C との間で変数の受け渡しが非常にしたくなるところだが、
+インラインアセンブラの文法はこの受け渡しをきれいに行ってくれる。
+また、レジスタ入出力の依存性をしっかり書けば、最適化の恩恵を受けることもできる
+(volatile で拒否することもできる)。</p>
+<pre><code class="language-C">asm volatile ("template" : output : input : clobber);
+</code></pre>
+<ul>
+<li>volatile
+<ul>
+<li>これをつけないと入力レジスタから出力レジスタを生成するだけの命令列として
+最適化の対象になるが、これをつけるとこの最適化を無効にする。</li>
+<li>副作用のある命令を書く場合は必ず必要。</li>
+</ul>
+</li>
+<li>template
+<ul>
+<li>アセンブラのテンプレート。
+ここから特定の文字列を入出力レジスタ名に自動で置換してくれたりする。</li>
+</ul>
+</li>
+<li>output
+<ul>
+<li>出力オペランド指定。</li>
+</ul>
+</li>
+<li>input
+<ul>
+<li>入力オペランド指定。</li>
+</ul>
+</li>
+<li>clobber
+<ul>
+<li>このアセンブラで破壊されるレジスタ。</li>
+<li>"memory" を指定するとメモリの読み書きを行うことをコンパイラに通知する。
+実質的にコンパイラに対するメモリバリアとなる
+(このアセンブラをまたいだメモリ読み書き命令の並べ替え抑止)。
+プロセッサによる投機実行は防げない。</li>
+</ul>
+</li>
+</ul>
+<p>マニュアル中の例。</p>
+<pre><code class="language-C">void do_print(uint32_t dwSomeValue)
+{
+   uint32_t dwRes;
+
+   for (uint32_t x=0; x &lt; 5; x++)
+   {
+      // Assumes dwSomeValue is not zero.
+      asm ("bsfl %1,%0"
+        : "=r" (dwRes)
+        : "r" (dwSomeValue)
+        : "cc");
+
+      printf("%u: %u %u\n", x, dwSomeValue, dwRes);
+   }
+}
+</code></pre>
+<ul>
+<li>bsfl は x86 の Bit Scan Forward 命令で、1が立っているビットの中で最下位のものの
+インデックスを返す命令らしい。</li>
+<li>テンプレート文字列中の <code>%0</code> や <code>%1</code> は、続く入出力オペランド指定で渡された
+値に該当する文字列に置換される。
+<ul>
+<li>ここでは C の引数やローカル変数をレジスタ指定で与えているため、
+コンパイラの決めたレジスタ名に置換される。</li>
+</ul>
+</li>
+<li>出力オペランドを <code>"=r" (dwRes)</code> のように記述することで、C のローカル変数 <code>dwRes</code> に
+対応するレジスタに値が書き込まれることをコンパイラに伝えることができる。
+<ul>
+<li><code>=</code> は書き込みを示す。</li>
+<li><code>r</code> は値のタイプで、レジスタを示す。ここを変えれば即値を渡せたりもする、と思う。</li>
+</ul>
+</li>
+<li>入力オペランドも同様。
+<ul>
+<li>C 引数の <code>dwSomeValue</code> の値が入ったレジスタ名で <code>%1</code> が置換される。</li>
+</ul>
+</li>
+<li>最後の <code>"cc"</code> は x86 のフラグレジスタが破壊されることを示す。</li>
+</ul>
+<p>この入出力オペランド制約では、ループ中で5回呼び出す意味はないと判断され、
+コンパイラによってループの外に出される可能性がある。
+それを防ぎたいならば、<code>asm volatile</code> とする必要がある (volatile 変数と同じ)。</p>
+<p>ただし volatile 変数と同じく、asm volatile をまたいで他の命令が移動される
+ことはあり得る (volatile 同士の順番は保存されたはず)。
+以下のマニュアルの例では、浮動小数点丸めモードのコントロールレジスタの後に
+演算が行われることを保証するために、<code>sum</code> への書き込み依存を追加している。
+<code>%0</code> は現れていないため実際には書き込まれないが、コンパイラは
+<code>sum = x + y</code> という <code>sum</code> への書き込みを上に移動することはできなくなる
+(<code>sum</code> の結果が変わってしまうように見えるため)。</p>
+<pre><code class="language-C">asm volatile ("mtfsf 255,%1" : "=X" (sum) : "f" (fpenv));
+sum = x + y;
+</code></pre>
+<p>このように、文法が覚えづらいとか、資料が少なすぎるとか、互換性汎用性が皆無とか、
+CPU 固有のオプションがいっぱいあるとかを我慢すれば、C コードとの間の値の受け渡しを
+かなりスムーズに実現できる。
+素のアセンブリで関数を書くと、呼び出し規約を読みながら引数と返り値がどこに置かれるかで
+苦労するし、そもそもインライン化して関数コールのオーバーヘッドを消したいという
+ケースも多いかもしれない。</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="参考文献"><a class="header" href="#参考文献">参考文献</a></h1>
 <ul>
 <li>最初から順に読み進めて読破が狙えるものと、それは普通に無理なものが存在する。</li>
