--- a/toc.html
+++ b/toc.html
@@ -27,6 +27,6 @@
         <!-- Custom theme stylesheets -->
     </head>
     <body class="sidebar-iframe-inner">
-        <ol class="chapter"><li class="chapter-item expanded "><a href="nand.html" target="_parent"><strong aria-hidden="true">1.</strong> NandGame 攻略</a></li><li class="chapter-item expanded "><a href="mt.html" target="_parent"><strong aria-hidden="true">2.</strong> マルチコアと同期</a></li><li class="chapter-item expanded "><a href="refer.html" target="_parent"><strong aria-hidden="true">3.</strong> 参考文献</a></li></ol>
+        <ol class="chapter"><li class="chapter-item expanded "><a href="nand.html" target="_parent"><strong aria-hidden="true">1.</strong> NandGame 攻略</a></li><li class="chapter-item expanded "><a href="mt.html" target="_parent"><strong aria-hidden="true">2.</strong> マルチコアと同期</a></li><li class="chapter-item expanded "><a href="asm.html" target="_parent"><strong aria-hidden="true">3.</strong> インラインアセンブラ</a></li><li class="chapter-item expanded "><a href="refer.html" target="_parent"><strong aria-hidden="true">4.</strong> 参考文献</a></li></ol>
     </body>
 </html>
