--- a/fourier.html
+++ b/fourier.html
@@ -177,9 +177,11 @@
 </li>
 <li>可逆圧縮のほとんど効かない写真画像や音声データを効率的に圧縮できる。
 <ul>
-<li>jpeg や音声、動画圧縮の中身の基本はこれ</li>
+<li>jpeg や音声、動画圧縮の中身の基本はこれ。</li>
 </ul>
 </li>
+<li>一筆書き (x(t), y(t)) を t でフーリエ変換すると円運動するベクトルの足し算で
+表現できる。見た目が面白いのでググってみよう。</li>
 </ul>
 <h2 id="波の基本"><a class="header" href="#波の基本">波の基本</a></h2>
 <p>実際のところ、対象は音などの時間で変化する信号だけに限らない。
@@ -188,7 +190,10 @@
 使っている感じのため、とりあえず時間変化する信号と考えておき、
 それ以外にも適用可能なことだけ気を付けておけばよい。</p>
 <p>とりあえず sin (cos) 波を考える。
-三角関数が最も基本的な波だから、とか、発電所ではタービンを円運動させているので
+X - Y の順に対応するのは cos - sin なので cos (sin) 波とした方がよいのかもしれない。
+いずれにしろ、sin と cos は横方向に平行移動しただけで全く同じ形の波なので、
+初期位相を (90 度分) ずらせばいくらでも変換できる。</p>
+<p>三角関数が最も基本的な波だから、とか、発電所ではタービンを円運動させているので
 コンセントには sin 波が来ているから、とか適当なことを言って (きちんとした事実だが)
 ごまかしながら導入するが、本当の理由は
 「三角関数とは全然違う波だとしても、三角関数の重ね合わせとして分解できるから」
@@ -226,7 +231,7 @@ $$</p>
 <ul>
 <li>角周波数 (angular frequency) \( \omega \)
 <ul>
-<li>三角関数内の時間に係数をつける形で $ \omega t $ のようにしたもの。</li>
+<li>三角関数内の時間に係数をつける形で \( \omega t \) のようにしたもの。</li>
 <li>単位は (角度 / 時間) で、rad / s 等。
 時間に掛け算すると角度となり三角関数に入れられる。</li>
 <li>単位時間あたり、一周期を 360 度とした割合で何度分進むか。</li>
@@ -248,7 +253,10 @@ $$</p>
 </ul>
 </li>
 </ul>
-<h2 id="フーリエ級数展開"><a class="header" href="#フーリエ級数展開">フーリエ級数展開</a></h2>
+<p>単位は時間変化する信号の場合を例として書いたが、時間を座標にすると
+画像を対象にできたりする。
+ただし同時に変数を2変数にする必要は出てくる。</p>
+<h2 id="フーリエ級数展開-実数"><a class="header" href="#フーリエ級数展開-実数">フーリエ級数展開 (実数)</a></h2>
 <ul>
 <li>三角関数とは似ても似つかないが、周期 T で繰り返してはいる信号があるとする。</li>
 <li>そんな都合よく周期 T でずっと繰り返す信号ばかりじゃない (例: 音声ファイル)、
@@ -287,14 +295,20 @@ $$</p>
 &amp;= A_k \sin k \omega _0 t + B_k \cos k \omega _0 t
 \end{aligned}
 $$</p>
-<p>のようになる。</p>
+<p>のようになる。
+つまり、基本周波数の k 倍の sin および cos を適切な倍率でブレンドして
+足し合わせていくと、(それなりの条件が満たされていれば)目的の関数に
+近づいていくということである。</p>
 <p>任意の A, B (sin の振幅と cos の振幅) を決めるのは
 任意の C, D (1つの三角関数の振幅と位相) を決めるのと同じ、
 という順番で説明されることが多いが、それは三角関数の合成を根拠にされる。
 三角関数の合成は加法定理の逆をやっているだけなので、
 とにかく2つの表現はどちらも同じことである。</p>
+<p>それでは、係数の決め方を説明する。
+以下は A, B (sin, cos の振幅) を決めることができる方法であるが、
+実質的に C, D (振幅と初期位相) を決めるのと同じことである。</p>
 <p>ここでちょっと準備をする。
-なぜか高校数学ではあまり注目されない気がするが、以下の事実がある。</p>
+なぜか高校数学ではあまり注目されない気もするが、以下の事実がある。</p>
 <p>$$
 \begin{aligned}
 n, m = 1, 2, 3, \ldots \\
@@ -306,19 +320,61 @@ $$</p>
 <p>整数倍の周波数の sin や cos について、周波数の異なるもの同士を掛けたもの、
 または周波数が同じだとしても sin と cos を掛けたものは
 基本周期で積分すると 0 になる。
-見た目がゴツいので例を書き下すと</p>
+見た目がゴツいので n, m にいくつかの値を代入した例を書き下すと</p>
 <p>$$
 \begin{aligned}
+\int_0^{2 \pi} \sin ^2 2t dt &amp;\ne 0 \\
+\int_0^{2 \pi} \cos ^2 5t dt &amp;\ne 0 \\
 \int_0^{2 \pi} \sin t \sin 3 t dt &amp;= 0 \\
 \int_0^{2 \pi} \cos 5 t \cos 8 t dt &amp;= 0 \\
-\int_0^{2 \pi} \sin 2 t \cos 2 t dt &amp;= 0 \quad \\
+\int_0^{2 \pi} \sin 2 t \cos 2 t dt &amp;= 0 \\
 \end{aligned}
 $$</p>
 <p>のような感じである。</p>
 <p>証明はただ積分を計算するだけだが、積を積分するのは難しいので和の形に変形する
 (三角関数は使える道具が多い)。
-一言で言うと積和の公式なのだが、要は加法定理をいじって積を和に変換する式を
-作るだけである。</p>
+一言で言うと倍角半角の公式、積和の公式なのだが、要は加法定理をいじって
+積を和に変換する式を作るだけである。</p>
+<p>cos の加法定理において同一の角度 ( \( \beta = \alpha \) ) とすると、
+sin や cos の2乗を cos の1乗の形にできる。</p>
+<p>$$
+\begin{aligned}
+\cos (\alpha + \alpha) &amp;= \cos \alpha \cos \alpha - \sin \alpha \sin \alpha \\
+\cos 2 \alpha &amp;= \cos ^2 \alpha - \sin ^2 \alpha
+\end{aligned}
+$$</p>
+<p>これと三角関数の基本公式、というよりは三角関数の定義そのもの</p>
+<p>$$
+\begin{aligned}
+\sin ^2 \alpha + \cos ^2 \alpha = 1 \\
+\sin ^2 \alpha = 1 - \cos ^2 \alpha \\
+\cos ^2 \alpha = 1 - \sin ^2 \alpha \\
+\end{aligned}
+$$</p>
+<p>を使って2乗のうちの片方を消去すれば</p>
+<p>$$
+\begin{aligned}
+\cos 2 \alpha &amp;= 1 - 2 \sin ^2 \alpha \\
+\cos 2 \alpha &amp;= 2 \sin ^2 \alpha - 1 \\
+\end{aligned}
+$$</p>
+<p>ちょっと変形してやれば積分できなくて困っていた三角関数の2乗を
+簡単に積分にできる1乗と定数の形に変換する式を作れる。</p>
+<p>$$
+\begin{aligned}
+\sin ^2 \alpha = \frac{1}{2} ( 1 - \cos 2 \alpha ) \\
+\cos ^2 \alpha = \frac{1}{2} ( 1 + \cos 2 \alpha ) \\
+\end{aligned}
+$$</p>
+<p>どちらの変換方向が倍角か半角かなんて覚えられないし、調べるとこの形は半角公式らしいが、
+半分の角度の sin, cos ならよく知っているので角度を半分にしたい、という動機ではなく、
+積分できる形に変形するため2乗を1乗に落としたいだけである。</p>
+<p>右辺をよく見ると \( \cos 2 \alpha \) の部分は周期 (の整数倍) の長さの区間で
+積分すると 0 になるから、定数 \( \frac{1}{2} \) と周期をかけたものだけが残り、
+0 にはならない。
+なお、交流に抵抗のみをつないだ時の電圧と電流の積 (つまり、消費電力) も、
+同じ三角関数の2乗の形になる。
+消費されるエネルギーの時間平均から実効値を求める時の積分計算も同じように計算できる。</p>
 <p>sin の加法定理をよく見ると三角関数の積が右辺にある。
 プラスマイナスの2つの式を上下に並べて辺々足し算 (または引き算) すれば
 sin と cos の積を和に直せる。</p>
@@ -330,13 +386,195 @@ sin と cos の積を和に直せる。</p>
 \end{aligned}
 $$</p>
 <p>右辺が今積分できずに困っている形、左辺は楽に積分できる形になっている。</p>
-<p>cos の加法定理を辺々いい感じにすれば sin 同士または cos 同士の積を和に直せる。</p>
+<p>cos の加法定理を辺々いい感じに足したり引いたりすれば、
+sin 同士または cos 同士の積を和に直せる。</p>
 <p>$$
 \begin{aligned}
 \cos (\alpha - \beta) &amp;= \cos \alpha \cos \beta + \sin \alpha \sin \beta \\
 \cos (\alpha + \beta) &amp;= \cos \alpha \cos \beta - \sin \alpha \sin \beta \\
 2 \sin \alpha \sin \beta &amp;= \cos (\alpha - \beta) - \cos (\alpha + \beta) \\
 2 \cos \alpha \cos \beta &amp;= \cos (\alpha - \beta) + \cos (\alpha + \beta) \\
+\end{aligned}
+$$</p>
+<ul>
+<li>\( \sin 0 = 0 \)
+<ul>
+<li>当然これをどこからどこまで積分してもゼロ</li>
+</ul>
+</li>
+<li>\( \cos 0 = 1 \)
+<ul>
+<li>これを周期 (0でない) で積分したら非ゼロ</li>
+</ul>
+</li>
+<li>\( \sin n \pi \) や \( \cos n \pi \)
+<ul>
+<li>周期の中で三角関数が n 周しているだけだから、周期での平均はゼロ、
+つまり積分したらゼロ</li>
+<li>ただし \( n = 0 \) の場合は除く。
+<ul>
+<li>このケースは上で議論済み。三角関数ではなく定数関数になる。</li>
+</ul>
+</li>
+<li>n が負の場合は含む。</li>
+</ul>
+</li>
+</ul>
+<p>準備が完了したので、まずは変換したい関数が以下のように <strong>展開できた</strong> と仮定する。</p>
+<p>$$
+\begin{aligned}
+f(t) &amp;\sim A_0 +
+A_1 \cos \omega _0 t + B_1 \sin \omega _0 t +
+A_2 \cos 2 \omega _0 t + B_2 \sin 2 \omega _0 t + \dots \\
+&amp;= A_0 +
+\sum _{k=1}^{\infty}
+( A_k \cos k \omega _0 t + B_k \sin k \omega _0 t )
+\end{aligned}
+$$</p>
+<p>本当にこんなことをしていいのか定かでない、かなりやばいことをしているので
+本物のイコールで結ぶのはさすがにどうかという気持ちを表すのにニョロ記号を使うことがある。</p>
+<p>まずは \( A_0 \) を求める。
+おもむろに両辺を基本周期で積分してみると、右辺の三角関数の項はすべて基本周波数の
+整数倍の周波数を持つ三角関数であるため、積分値はゼロになる。
+したがって三角関数の項はすべて消えて、</p>
+<p>$$
+\begin{aligned}
+\int_0^{T_0} f(t) dt &amp;= \int_0^{T_0} A_0 dt \\
+&amp;= A_0 T_0 \\
+A_0 &amp;= \frac{1}{T_0} \int_0^{T_0} f(t) dt
+\end{aligned}
+$$</p>
+<p>信号を基本周期で積分して出てきた面積を基本周期で割っている。
+これは信号の基本周期あたりの平均値である。
+三角関数は周期あたりで平均するとゼロであるため、どれだけ足し算しても平均がゼロの
+信号しか作れない。
+そこを何とかするために振動中心をこの値にセットしていると理解できる。
+また、この定数値を直流成分とも呼ぶ。
+電気信号をフーリエ変換すると時間に対する定数関数 (直流) と三角関数 (交流) の和に
+分解できることから来ている。</p>
+<p>では本題の各三角関数の係数はというと、おもむろに欲しい項と同じ周波数と種類の
+三角関数を掛けてから基本周期で積分する。
+直流成分に三角関数を掛けた分は三角関数の定数倍となるので、
+基本周期で積分すればゼロとなる。
+同じ周波数で sin または cos の場合は非ゼロとなり、この項が残る。
+それ以外は事前準備で見てきたように、全てゼロとなる。
+sin や cos の2乗は倍角半角で次数を落として計算する。</p>
+<p>$$
+\begin{aligned}
+\int _0^T f(t) \cos 2 \omega_0 t dt
+&amp;= \int _0^T A_0 \cos 2 \omega_0 t dt +
+\int _0^T ( \sum _{k=1}^{\infty}
+( A_k \cos k \omega _0 t + B_k \sin k \omega _0 t ) ) \cos 2 \omega_0 t dt \\
+&amp;= A_2 \int _0 ^T \cos ^2 2 \omega _0 t dt \\
+&amp;= A_2 \cdot \frac{T}{2} \\
+A_2 &amp;= \frac{2}{T} \int _0^T ( \cos 2 \omega_0 t ) f(t) dt \\
+\end{aligned}
+$$</p>
+<p>基本周波数の k 倍の sin, cos に一般化すると以下のようになる。
+$$
+\begin{aligned}
+A_k &amp;= \frac{2}{T} \int _0^T f(t) \cos k \omega_0 t dt \\
+B_k &amp;= \frac{2}{T} \int _0^T f(t) \sin k \omega_0 t dt \\
+\end{aligned}
+$$</p>
+<p>cos の方に \( k = 0 \) を代入すると \( \cos 0 = 1 \) より都合よく
+三角関数が消えて、</p>
+<p>$$
+\begin{aligned}
+A_0 &amp;= \frac{2}{T} \int _0^T f(t) dt \\
+\end{aligned}
+$$</p>
+<p>となる。これは最初に求めた式の2倍になっているので、なんかいい感じに調整すると
+式をきれいにできる。
+しかし本来の意味から多少外れることになるかもしれない。</p>
+<h3 id="直交関数形"><a class="header" href="#直交関数形">直交関数形</a></h3>
+<p>関数 \( f(t) \) の変数 t をある範囲で左から右へ少しずつ動かしながら、
+その値 \( f(t) \) を順番に並べてベクトルを作ることを考える。
+そのまま動かし方を細かくしていく (分割数を無限大に飛ばす) と、
+関数は <strong>無限次元のベクトル</strong> とみなせる。</p>
+<p>$$
+\boldsymbol f = (
+f(a), f(a + \Delta t), f(a + 2\Delta t), \ \dots \ , f(b)
+)
+$$</p>
+<p>さらに上記で行った <strong>関数に同じ t を渡した関数を掛けて、積分する</strong> という操作は
+<strong>ベクトルの同じ番号の値同士を掛けて、足し合わせる</strong> という <strong>内積</strong> の操作に
+似ていることが分かる。</p>
+<p>$$
+\begin{aligned}
+\int_a^b f(t) g(t) dt
+\end{aligned}
+$$</p>
+<p>高校数学のベクトルの内積は抽象化一般化された内積のうちの特殊ケースであって、
+関数を掛けて積分したものも内積と呼ぶ。
+(内積が満たすべき性質として内積の公理を考え、それをすべて満たすものになっている。)</p>
+<p>後のことも考えると、まず複素ベクトルの内積は片方の複素共役を取ってから
+実数の時と同じような計算を行うものと定義されることも知っておいた方がよい。
+何でと言われればそちらの方が自然だから (内積の公理を満たすから) だし、
+実数ベクトルの内積の左右を入れ替えられるのは、実数の複素共役はその数自身だからである。
+複素ベクトルの内積では交換法則は一般に成り立たない
+(代わりにエルミート性が成り立つ)。</p>
+<p>$$
+\boldsymbol a \cdot \boldsymbol b = \sum _{i=1}^n a_i \overline{b_i} \\
+\boldsymbol a \cdot \boldsymbol b =
+\overline{ \boldsymbol b \cdot \boldsymbol a }
+$$</p>
+<p>関数の内積も、複素関数まで通用するような形は片方の複素共役をとった形になる。</p>
+<p>$$
+\begin{aligned}
+\int_0^T f(t) \overline{g(t)} dt
+\end{aligned}
+$$</p>
+<p>二次元や三次元ベクトル同士の内積がゼロのとき、2つのベクトルは <strong>直交する</strong> と言った。
+無限次元のベクトルととらえた関数同士の内積も、それがゼロとなるとき2つの関数は
+<strong>直交する</strong> と言う。
+無限次元ではもはや垂直とは何か全く分からないが、そういうものである。</p>
+<p>抽象化された線形代数の世界で N 本の独立な (平行でない) ベクトルの線形和で表される
+空間を N 次元空間と言った。
+もし基底が (XY平面やXYZ空間のように) お互いに垂直で、かつ長さが 1 ならば、
+扱いが非常に楽になる。
+この条件を満たした基底の組を <strong>正規直交基底</strong> と呼ぶ。
+正規は長さが1という意味、直交は他のすべてとの内積がゼロという意味である。</p>
+<p>この条件の下では、ベクトルの X 成分を求めたいなら X 軸に垂線を下ろせばよいから、
+(1, 0) との内積をとればよい。
+この事実はフーリエ級数展開で係数を求める作業にそっくりである。</p>
+<ul>
+<li>展開に使用している \( sin k \omega_0 t , cos k \omega_0 t \) は
+自身以外の全てとの内積、つまり関数同士を掛けて積分したもの、はゼロになる。</li>
+<li>自分自身との内積、つまり2乗の積分は、ノルム (ベクトルの長さの一般化) の2乗であり、
+1になってくれると正規ベクトルとなり嬉しい。
+残念ながらそのままでは1にならないが、元の関数をいい感じの定数倍すれば
+簡単に1になるよう調整できる。</li>
+<li>上記2つを満たすことにより、フーリエ級数展開に使う三角関数群は
+無限個の正規直交基底をなす。</li>
+<li>ある基底の方向の成分を求めるためには、その基底との内積を取るだけでよい。
+つまり (実数なら) その三角関数を掛けて積分するだけである。
+複素数なら片方の複素共役を取ってから掛ける。</li>
+</ul>
+<h2 id="フーリエ級数展開-複素数"><a class="header" href="#フーリエ級数展開-複素数">フーリエ級数展開 (複素数)</a></h2>
+<p>残念ながら、実数でのフーリエ級数展開は直感的な理解やイメージのしやすさに優れるが、
+はっきり言って複素表現の方が便利 (デメリットは複素数への抵抗感くらいしかない) な
+ため、実用では複素数による展開が用いられることがほとんどである。
+なのでプログラミングや高速フーリエ変換など実践的なものをあたる前には
+複素表現に慣れておかないと、実数だけでの理解だけでは非常に苦しい思いをする。</p>
+<p>複素数のよく分からなさの感覚を捨て去り、慣れることが大切である。</p>
+<p>まずはオイラーに感謝しつつ三角関数を消し去る。
+三角関数は複素数の範囲では指数関数に <strong>等しい</strong> ため、
+三角関数は全て消去して指数関数だけの式に変換することができる。
+オイラーの公式はそのままでは指数関数を三角関数に変換する形になっているが、
+まず角度 \( \theta \) のプラスマイナスを考える。
+角度がマイナスになると cos そのままで sin は正負が入れ替わるので</p>
+<p>$$
+\begin{aligned}
+e^{ i \theta } = \cos \theta + i \sin \theta \\
+e^{ -i \theta } = \cos \theta - i \sin \theta \\
+\end{aligned}
+$$</p>
+<p>これを片々足したり引いたりすることで
+三角関数を指数関数に変換する式に変形することができる。</p>
+<p>$$
+\begin{aligned}
+\cos \theta = \frac{1}{2} ( e^{ i \theta } + e^{ -i \theta } )
 \end{aligned}
 $$</p>
 
